# medical-scheduling-agent

./: .dockerignore  .env.example  .env.example.cloud-run  .env.example.local-ollama  .gitattributes  .gitignore  Dockerfile  README.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: calendar.py  debug.py  health.py  rag.py  voice.py
backend/app/core/: logging.py  settings.py
backend/app/models/: appointment.py  calendar.py  debug.py  ingestion.py  medical_rule.py  rag.py  transcription.py
backend/app/services/: appointment_pipeline.py  asr.py  bielik.py  calendar_repository.py  calendar_state.py  debug_analysis.py  embeddings.py  exceptions.py  intent_postprocessing.py  medical_rules.py  plain_appointment_analyzer.py  rag.py  rag_ingestion.py  rag_prompting.py  rag_retrieval.py  scheduler.py  sms.py
backend/tests/: test_appointment_pipeline.py  test_bielik.py  test_calendar_api.py  test_calendar_repository.py  test_debug_analysis.py  test_demo_smoke_tool.py  test_deploy_assets.py  test_embeddings.py  test_health.py  test_intent_postprocessing.py  test_medical_rules.py  test_plain_appointment_analyzer.py  test_rag_analysis.py  test_rag_backend_selection.py  test_rag_ingestion.py  test_runtime_profiles.py  test_scheduler.py  test_transcription_service.py  test_voice_api.py
backend/tests/local_ai/: test_bielik_rag_scheduler_acceptance.py
backend/tools/: run_bielik_acceptance_tests.py
data/rag/: README.md  appointment_duration_rules_pl.md
data/rag/examples/: dentistry_rules.jsonl  diagnostics_rules.csv  general_practice_rules.csv  physiotherapy_rules.md
deploy/: README.md  docker-compose.local.yml
deploy/cloud-run/: backend-cloud-run.sh  backend-entrypoint.sh  bielik-cloud-run.sh  deploy-demo.sh  embedding-cloud-run.sh  frontend-cloud-run.sh
deploy/ollama-bielik/: Dockerfile
deploy/ollama-embedding/: Dockerfile  entrypoint.sh
docs/: architecture.md  demo-evaluation.md  local-models.md  requirements.md
docs/upgrade-plan/: 01-ollama-http-llm-provider.md  02-local-and-cloud-model-servers.md  03-standardize-rag-backends.md  04-medical-rules-ingestion.md  05-direct-vs-rag-debug-flow.md  06-cloud-ready-runtime-profiles.md  07-public-readme.md  08-harden-llm-json-contracts.md  09-rag-scheduler-quality-tests.md  10-public-demo-release.md  README.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
frontend/src/api/: client.ts
models/: README.md
tools/: run_demo_smoke.py
(+5 files in other folders)
