[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-scheduling-agent-backend"
version = "0.1.0"
description = "Local-first voice appointment scheduling demo backend."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.21",
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
local-rag = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-html>=4.2.0",
    "ruff>=0.6.0",
    "httpx>=0.27.0",
]
cloud = [
    "google-cloud-bigquery>=3.25.0",
    "nvidia-cublas-cu12==12.6.4.1; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "nvidia-cuda-runtime-cu12==12.6.77; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "nvidia-cudnn-cu12==9.5.1.17; platform_system == 'Linux' and platform_machine == 'x86_64'",
]
postgres = [
    "psycopg[binary]>=3.2.0",
]
legacy-private-model-services = [
    "google-auth>=2.35.0",
]

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "local_ai: tests that load local Bielik, RAG embeddings, and scheduler integration",
]
